--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+    <div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
     <div class="footer-content">
         <h5 class="tag-line">Weekly Newsletter</h5>
         <h3> Get my tips directly into your inbox every Monday morning.</h3> 
@@ -6,7 +7,7 @@
                     <input type="email" placeholder="Enter your e-mail" required />
                     <button type="submit">Subscribe!</button>
                 </form> -->
-<div *ngIf="messageType === 'success'" class="success-message">
+<!-- <div *ngIf="messageType === 'success'" class="success-message">
   {{ message }}
 </div>
         <form (ngSubmit)="submitSubscribe()" class="newsletter-form" #form="ngForm">
@@ -17,7 +18,7 @@
         </form>
         <div *ngIf="message" [ngClass]="messageType">
   {{ message }}
-</div>
+</div> -->
 
         <div class="social-icons">
             <a target="_blank" href="https://www.facebook.com/kennyweiss.net"><i
@@ -28,72 +29,5 @@
                     class="fa-brands fa-youtube"></i></a>
         </div>
     </div>
-
-
-    <!-- <div class="marquee">
-        <div class="marquee__inner">
-            <div class="marquee__group">
-                <div class="instagram-feed">
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/1.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/2.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/3.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/4.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/5.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/6.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/7.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/8.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/9.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/10.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/11.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/12.jpeg"
-                            loading="lazy" alt=""></a>
-                </div>
-            </div>
-
-            <div class="marquee__group">
-                <div class="instagram-feed">
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/1.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/2.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/3.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/4.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/5.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/6.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/7.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/8.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/9.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/10.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/11.jpeg"
-                            loading="lazy" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/12.jpeg"
-                            loading="lazy" alt=""></a>
-                </div>
-            </div>
-        </div>
-
-    </div> -->
-<div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
-
-
     <p class="rights-reserved">Copyright © 2025 Kenny Weiss | All Rights Reserved</p>
 </footer>
