--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -28,7 +28,7 @@
             <ul class="navmenu">
                 <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
                 </li>
-                <li><a routerLink="/meet-kenny" routerLinkActive="active"
+                <li><a routerLink="/about-kenny-weiss" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Meet Kenny</a></li>
                 <li><a routerLink="/courses" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Courses</a></li>
