--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -407,7 +407,7 @@
                     <p>It’s where <b>inner work meets brain science —</b> and the results are
                         life-changing.</p>
 
-                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Talk to Kenny</a>
+                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Book a session with Kenny</a>
 
 
                 </div>
