--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4796,6 +4796,7 @@ a.bolder {
 .footer-content {
     width: 30%;
     margin: 0 auto;
+    padding: 40px 0;
 }
 
 /***************marquee****************/
