--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -150,14 +150,14 @@
                             <p class="b">📘 Read the Book</p>
                         </td>
                         <td>Learn how emotional cycles form and how to break them</td>
-                        <td><a class="button" routerLink="/book-a-session-with-kenny-weiss">Get the Book</a></td>
+                        <td><a class="button" routerLink="/books-by-kenny-weiss">Get the Book</a></td>
                     </tr>
                     <tr>
                         <td>
                             <p class="b">🎓 Take a Course</p>
                         </td>
                         <td>Step-by-step emotional healing from the comfort of your home</td>
-                        <td><a class="button" routerLink="/Courses">Explore Courses</a></td>
+                        <td><a class="button" routerLink="/courses">Explore Courses</a></td>
                     </tr>
                     <tr>
                         <td>
