--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -12,41 +12,64 @@
                 </div>
 
                 <div class="form">  
-                    <div *ngIf="formSuccess" class="success-message">
-                        Thank you! Your message has been sent successfully.
+    <div *ngIf="formSuccess" class="success-message">
+        Thank you! Your message has been sent successfully.
+    </div>
+
+    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitForm(contactForm)">
+
+        <div class="row">
+            <div class="contactfiled">
+            <input type="text" placeholder="First Name" name="name" [(ngModel)]="formData.name" required
+                #name="ngModel" />
+            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">
+                First Name is required
+            </div>
+</div>
+ <div class="contactfiled">
+            <input type="text" placeholder="Last Name" name="lastname" [(ngModel)]="formData.lastname" required
+                #lastname="ngModel" />
+            <div *ngIf="(formSubmitted || lastname.touched) && lastname.invalid" class="error">
+                Last Name is required
+            </div>
+        </div>
+</div>
+
+        <div class="row my-2">
+             <div class="contactfiled">
+            <input type="email" placeholder="E-mail Address" name="email" [(ngModel)]="formData.email"
+                required email #email="ngModel" />
+            <div *ngIf="(formSubmitted || email.touched) && email.invalid" class="error">
+                A valid Email is required
+            </div>
+</div>
+  <div class="contactfiled">
+            <input type="tel" placeholder="Phone Number" name="phone" [(ngModel)]="formData.phone" required
+                #phone="ngModel" />
+            <div *ngIf="(formSubmitted || phone.touched) && phone.invalid" class="error">
+                Phone is required
+            </div>
+            </div>
+        </div>
+
+        <div class="row">
+              <div class="contactfiled">
+            <textarea rows="5" placeholder="Message" name="message" [(ngModel)]="formData.message" required
+                #message="ngModel"></textarea>
+            <div *ngIf="(formSubmitted || message.touched) && message.invalid" class="error">
+                Message is required
+            </div>
+            </div>
+        </div>
+
+        <!-- Keep button always enabled to let validation errors show -->
+         <div class=" buttoncontactcenter">
+                    <button class="button" type="submit">Send Message</button>
                     </div>
-                    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitForm(contactForm)">
 
-                        <div class="row">
-                            <input type="text" placeholder="First Name" name="name" [(ngModel)]="formData.name" required
-                                #name="ngModel" />
-                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">First Name is
-                                required</div>
+    </form>
+</div>
 
-
-                            <input type="text" placeholder="Last Name" name="lastname"
-                                [(ngModel)]="formData.lastname" />
-                        </div>
-
-                        <div class="row my-2">
-                            <input type="email" placeholder="E-mail Address" name="email" [(ngModel)]="formData.email"
-                                required email #email="ngModel" />
-                            <div *ngIf="(formSubmitted || email.touched) && email.invalid" class="error">
-                                A valid Email is required
-                            </div>
-
-                            <input type="tel" placeholder="Phone Number" name="phone" [(ngModel)]="formData.phone" />
-                        </div>
-
-                        <div class="row">
-                            <textarea rows="5" placeholder="Message" name="message"
-                                [(ngModel)]="formData.message"></textarea>
-                        </div>
-
-                        <button class="button" type="submit">Send Message</button>
-                    </form>
-
-                </div>
             </div>
 
         </div>
@@ -66,16 +89,7 @@
                         <a href="#">kw&#64;kennyweiss.net</a>
                     </div>
                 </div>
-
-                <!-- <div class="contacts-box">
-                    <div class="iconcontact">
-                       <i class="fa-solid fa-clock"></i>
-                    </div>
-                    <div class="contact-content">
-                        <h4>Time</h4>
-                        <p>Mon. - Thursday - 7AM - 5 PM</p>
-                    </div>
-                </div> -->
+ 
                 <div class="contacts-box">
                     <div class="iconcontact">
                         <i class="fa-solid fa-location-dot"></i>
