--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -16,6 +16,8 @@
                                 class="fa-brands fa-x-twitter"></i> </a>
                         <a target="_blank" href="https://www.tiktok.com/@kennyweisskw" class="sociallink"><i
                                 class="fa-brands fa-tiktok"></i> </a>
+                        <a target="_blank" href="https://www.youtube.com/channel/UC5eK9c7LRJoK6NW52nlythw" class="sociallink"><i
+                                class="fa-brands fa-youtube"></i> </a>
                     </div>
                 </div>
 
