--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -297,23 +297,7 @@
         </div>
     </section>
 
-    <div class="testimonial-section">
-        <div class="container">
-            <div class="testimonia-row">
-                <div class="testimonial-text">
-                    <h5 class="tag-line">Testimonials</h5>
-                </div>
-
-
-                <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
-
-                </div>
-
-
-            </div>
-        </div>
-    </div>
+    
 
 
 
@@ -679,6 +663,28 @@
             </div>
         </div>
     </section>
+    <section>
+
+        <div class="testimonial-section">
+        <div class="container">
+            <div class="testimonia-row">
+                <div class="testimonial-text">
+                    <h5 class="tag-line">Testimonials</h5>
+                     <h3>Voices of Transformation</h3>
+                </div>
+
+
+                <div class="swiper testimoalkenny">
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+    </section>
+    
 
 
 </main>
