--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,7 +16,31 @@ body {
     margin: 0;
     padding: 0;
 }
+.testimonial-section .dNtlyB {
+    display: none;
+}
+button.ButtonBase__ButtonContainer-sc-f9fbfeb2-3.fmYWVa.es-load-more-button:hover {
+    box-shadow: 200px 0 0 0 #bba056 inset !important;
+}
 
+button.ButtonBase__ButtonContainer-sc-f9fbfeb2-3.fmYWVa.es-load-more-button {
+    background-color: #512570 !important;
+    font-weight: 500 !important;
+    padding: 5px 0px !important;
+    text-decoration: none!important;
+    transition: 0.6s !important;
+    font-size: 15px !important;
+    color: #ffffff !important;
+    font-family: "Poppins", sans-serif !important;
+    border-radius: 1.875em !important;
+    text-transform: uppercase !important;
+    box-shadow: 0 0 0 0 #bba056 inset !important;
+    border: 0px !important;
+}
+span.ButtonBase__Overlay-sc-f9fbfeb2-4.iTcqZX 
+ {
+    background-color: transparent !important;
+}
 h1,
 h2,
 h3,
