--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -208,7 +208,7 @@
                     <h5 class="tag-line">Testimonials</h5>
                     <!-- <h3>Voices of Transformation</h3>
                     <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
-
+                    <h3>Voices of Transformation</h3>
                 </div>
 
 
