--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -229,8 +229,8 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <!-- <h3>Voices of Transformation</h3>
-                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
+                     <h3>Voices of Transformation</h3>
+                    <!--<p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
 
                 </div>
 
