--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -570,13 +570,13 @@
     </div>
 
 
-    <div class="testimonial-section">
+      <div class="testimonial-section">
         <div class="container">
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <!-- <h3>Voices of Transformation</h3>
-                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
+                     <h3>Voices of Transformation</h3>
+                
 
                 </div>
 
