--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -61,7 +61,7 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                  
+                   <h3>Voices of Transformation</h3>
                 </div>
 
 
