--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -513,7 +513,8 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <!-- <h3>Voices of Transformation</h3>
+                     <h3>Voices of Transformation</h3>
+                    <!-- 
                     <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
 
                 </div>
