--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,13 @@
+<section class="courses-master-classess">
+    <div class="flex-row"><h3>Connect With kenny</h3></div>
+
+<div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
+
+</section>
+
+
 <footer class="footer">
-    <div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
-    <div class="footer-content">
+   <div class="footer-content">
         <h5 class="tag-line">Weekly Newsletter</h5>
         <h3> Get my tips directly into your inbox every Monday morning.</h3> 
         <!-- <form class="newsletter-form">
