--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section class="courses-master-classess">
     <div class="flex-row"><h3>Connect With kenny</h3></div>
 
-<div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
+ <div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div> 
 
 </section>
 
@@ -10,11 +10,8 @@
    <div class="footer-content">
         <h5 class="tag-line">Weekly Newsletter</h5>
         <h3> Get my tips directly into your inbox every Monday morning.</h3> 
-        <!-- <form class="newsletter-form">
-                    <input type="email" placeholder="Enter your e-mail" required />
-                    <button type="submit">Subscribe!</button>
-                </form> -->
-<!-- <div *ngIf="messageType === 'success'" class="success-message">
+         
+<div *ngIf="messageType === 'success'" class="success-message">
   {{ message }}
 </div>
         <form (ngSubmit)="submitSubscribe()" class="newsletter-form" #form="ngForm">
@@ -25,7 +22,7 @@
         </form>
         <div *ngIf="message" [ngClass]="messageType">
   {{ message }}
-</div> -->
+</div>
 
         <div class="social-icons">
             <a target="_blank" href="https://www.facebook.com/kennyweiss.net"><i
