--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <section class="courses-master-classess">
-    <div class="flex-row"><h3>Connect With kenny</h3></div>
+    <div class="flex-row"><h3>Connect With Kenny</h3></div>
 
  <div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div> 
 
