--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -157,7 +157,7 @@
                 <!-- Left Side -->
                 <div class="left">
                     <div class="shine-effect">
-                        <img src="images/4.jpeg" alt="Team Image" loading="lazy" />
+                        <img src="images/kennynew.jpg" alt="Team Image" loading="lazy" />
                     </div>
                     <div class="award-badge">
                         <img src="images/icf_horizontal.png" class="award-star" loading="lazy" alt="">
