--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -1,5 +1,7 @@
+<div *ngIf="loading" class="loader-maim"> 
+<div class="hm-spinner"></div>
+</div>
 <main class="mt bookasectionage">
-
     <div class="event-details-setion">
         <div class="container">
             <div class="event-details">
