--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -1,7 +1,13 @@
+<!-- Loader -->
+ 
 <div *ngIf="loading" class="loader-maim"> 
 <div class="hm-spinner"></div>
 </div>
-<main class="mt bookasectionage">
+
+
+
+<main class="mt bookasectionage" *ngIf="!loading">
+  
     <div class="event-details-setion">
         <div class="container">
             <div class="event-details">
