--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -1,12 +1,12 @@
 <!-- Loader -->
  
-<div *ngIf="loading" class="loader-maim"> 
+<div *ngIf="isLoading" class="loader-maim"> 
 <div class="hm-spinner"></div>
 </div>
 
 
 
-<main class="mt bookasectionage" *ngIf="!loading">
+<main class="mt bookasectionage">
   
     <div class="event-details-setion">
         <div class="container">
@@ -54,7 +54,7 @@
                             [routerLink]="[]" fragment="clendly">Schedual
                             Now</a>
                     </div>
-                </div>
+                </div> 
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
         <div class="calendly-inline-widget"
             data-url="https://calendly.com/kennyweiss/single-session-350?hide_gdpr_banner=1"
             style="min-width:320px; height:700px;">
-        </div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        </div>  
+ 
     </section>
 
 
@@ -149,7 +149,7 @@
     <div class="section-wrapper">
         <div class="container">
             <div class="flex-inwrapper">
-                <div class="content aos-init aos-animate" data-aos="fade-up" data-aos-duration="100">
+                <div class="content aos-init aos-animate">
                     <h5 class="tag-line">What we have</h5>
                     <h3>How Can Kenny Help You?</h3>
 
