--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="banner0mobileview">
             <img src="./images/image23.jpg">
         </div>
-        <section class="banner" style="background-image: url(./images/banner.jpeg);">
+        <section class="banner" style="background-image: url(./images/banner.webp);">
             <div class="container">
                 <div class="bannerflex">
                     <div class="banner-content">
@@ -157,7 +157,7 @@
                 <!-- Left Side -->
                 <div class="left">
                     <div class="shine-effect">
-                        <img src="images/kennynew.jpg" alt="Team Image" loading="lazy" />
+                        <img src="images/kennynew.webp " alt="Team Image" loading="lazy" />
                     </div>
                     <div class="award-badge">
                         <img src="images/icf_horizontal.png" class="award-star" loading="lazy" alt="">
@@ -234,7 +234,7 @@
                         </ul>
 
                         <div class="video-box shine-effect" (click)="openLightbox()">
-                            <img src="images/5.jpeg" alt="Thumbnail" loading="lazy" style="width:200px;cursor:pointer;">
+                            <img src="images/5.webp " alt="Thumbnail" loading="lazy" style="width:200px;cursor:pointer;">
                             <a class="video-play-button"><span></span></a>
                         </div>
 
@@ -553,7 +553,7 @@
                 </div>
 
                 <div class="podcast-right shine-effect">
-                    <img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Podcast" />
+                    <img src="images/KEN-Podcast-1.webp" loading="lazy" alt="Podcast" />
                 </div>
 
 
