--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="podcast-right shine-effect">
-                    <img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Podcast">
+                    <img src="images/KEN-Podcast-1.webp " loading="lazy" alt="Podcast">
                 </div>
 
 
@@ -115,7 +115,7 @@
             <div class="flex-who-we-are">
                 <div class="left-images">
                     <div class="main-img">
-                        <img src="images/5.jpeg" loading="lazy" alt="Woman on computer">
+                        <img src="images/5.webp" loading="lazy" alt="Woman on computer">
                     </div>
                 </div>
 
