--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -562,7 +562,7 @@
 
                 <div class="images">
                     <div class="img1"><img src="images/podcast-img-14.jpg" loading="lazy" alt="Group Coaching"></div>
-                    <div class="img2"><img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Workshop Session"></div>
+                    <div class="img2"><img src="images/KEN-Podcast-1.webp " loading="lazy" alt="Workshop Session"></div>
                     <div class="decor"></div>
                 </div>
             </div>
@@ -598,7 +598,7 @@
                 <div class="left-area">
                     <div class="thumbnail-wrapper3">
                         <div class="course-1">
-                            <img src="images/5.jpeg" loading="lazy" alt="">
+                            <img src="images/5.webp" loading="lazy" alt="">
                         </div>
                         <div class="touimg">
                             <div class="thumbnail image-2">
