--- a/src/app/layout/not-found/not-found.component.html
+++ b/src/app/layout/not-found/not-found.component.html
@@ -2,7 +2,7 @@
   <div class="notfound-content">
     <h1>404</h1>
     <h2>Page Not Found</h2>
-    <p>Oops! Ye page exist nahi karta ya delete ho chuka hai.</p>
+    <p>Oops! The page you’re looking for doesn’t exist or may have been removed.</p>
     <a routerLink="/" class="btn-home">Go Back Home</a>
   </div>
 </div>
